# rust-crafting-interpreters

./: Cargo.toml
src/: bytecode.rs  callable.rs  errors.rs  expressions.rs  interpreter.rs  lexer.rs  lib.rs  parser.rs  printer.rs  reader.rs  values.rs
src/bytecode/: compiler.rs  debug.rs  lexer.rs  table.rs  values.rs  vm.rs
src/interpreter/: builtins.rs  environment.rs  resolver.rs  tree_walk.rs
tests/: bench.lox  harness.rs  parser.rs  test.lox
