[package]
name = "rust-crafting-interpreters"
version = "0.1.0"
edition = "2021"
authors = ["pierreyoda <pierreyoda@users.noreply.github.com>"]

[[bin]]
name = "rust_crafting_interpreters"
path = "src/bin/main.rs"

[lib]
name = "rust_crafting_interpreters_lib"
path = "src/lib.rs"

[features]
default = []

bytecode-tracing = []
code-printing = []

[dependencies]
clap = { version = "3.0.14", features = ["derive"] }
thiserror = "1.0.30"
regex = "1.5.4"
lazy_static = "1.4.0"

[dev-dependencies]
walkdir = "2.3.2"
